--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,26 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<to>
+						<image>pilot</image>
+						<tags>
+							<tag>${project.version}</tag>
+						</tags>
+					</to>
+					<from>
+						<image>openjdk:8-jdk-alpine</image>
+					</from>
+					<container>
+						<format>OCI</format>
+						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+					</container>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
