Change base image

--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
 						</tags>
 					</to>
 					<from>
-						<image>openjdk:8-jdk-alpine</image>
+						<image>openjdk:8-jre-slim-buster</image>
 					</from>
 					<container>
 						<format>OCI</format>
