--- a/deploy/pilot.yaml
+++ b/deploy/pilot.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: pilot-config
-  namespace: ctrlplane-system
+  namespace: ctrlplane-dev
   labels:
     app: pilot
 data:
@@ -13,7 +13,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ctrlplane-pilot
-  namespace: ctrlplane-system
+  namespace: ctrlplane-dev
   labels:
     app: pilot
 spec:
@@ -47,7 +47,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ctrlplane-pilot-grpc
-  namespace: ctrlplane-system
+  namespace: ctrlplane-dev
   labels:
     app: pilot
 spec:
