--- a/.github/workflows/pilot-build.yaml
+++ b/.github/workflows/pilot-build.yaml
@@ -17,6 +17,6 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
           architecture: x64
-          cache: Maven
+          cache: maven
       - name: Build with Maven
         run: mvn clean compile jib:build
