--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ grpc:
 
 keyRequest:
   baseUrl: http://localhost:8080/api/v1/key
+  cache:
+    timeout: 10
+    units: SECONDS
 
 server:
   port: 32323
