--- a/.github/workflows/pilot-build.yaml
+++ b/.github/workflows/pilot-build.yaml
@@ -19,4 +19,4 @@ jobs:
           architecture: x64
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean package
