--- a/.github/workflows/pilot-build.yaml
+++ b/.github/workflows/pilot-build.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: pilot-build
+name: Build
 on:
   push:
     branches: [ main ]
