--- a/.github/workflows/pilot-build.yaml
+++ b/.github/workflows/pilot-build.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   build-pilot:
-    runs-on: ubuntu:20-04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 8
