--- a/.github/workflows/pilot-build.yaml
+++ b/.github/workflows/pilot-build.yaml
@@ -47,6 +47,13 @@ jobs:
         with:
           name: pilot
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          architecture: x64
+
       - name: get jar name
         run: | 
           export JAR_NAME=$(find . -name pilot*.jar)
